[package]
name = "i3cnucleo"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.2.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "stm32h503rb", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embedded-io = { version = "0.4.0", features = ["async"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7c1dd5d2d10020ae569b878231c6c00524" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7c1dd5d2d10020ae569b878231c6c00524" }

[profile.release]
debug = 2
# lto = 'fat'
